2008-08-09  Ethan Merritt  <merritt@u.washington.edu>

	* src/readline.c (ansi_getc): Teach built-in readline to map
	CSI-H to ^A and CSI-F to ^E, which offers some hope that the <end> and
	<home> keys will do something useful.
	Bug #1556607

2008-08-06  Benjamin <lindnerb@users.sourceforge.net>

	* term/post.trm: Fix parsing error for option "palfuncparam".
	Bug #2039912

	* term/emf.trm: Allow fractional linewidths; do not allow dash pattern
	length to go to zero.
	Bug #2040244

2008-08-06  Ethan Merritt  <merritt@u.washington.edu>

	* term/emf.trm: Provide a separate "dashlength" option similar
	to the post, pdf, gd, and cairo terminals.

2008-08-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.h src/eval.c: Track min/max range of data on each axis
	indepently of the current axis range itself.  Export to the
	corresponding variables GPVAL_DATA_{AXIS}_MIN and so on.
	This is useful all by itself, but also lays the groundwork for
	implementing "range-frame" borders as per request #2025481.

2008-08-02  James R. Van Zandt  <jrvz@comcast.net>

	* docs/gnuplot.doc: Fix syntax of "plot index": If only two
	numbers are supplied, it's the third number (the stride) that has
	been omitted.  Therefore, the third number should be in the
	innermost braces.

2008-08-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (add_tic_user): Ignore NULL labels. This prevents possible
	segfault if tic labels are requested from a non-existent data column.

	* src/plot2d.c (eval_plots): Remove order dependency of newhist options.

2008-07-31  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots) src/graphics.c (do_plot):
	Histograms did not correctly honor 'set style user increment'.
	Bugfix.

2008-07-29  Ethan Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp(wxt_set_color) 
	term/cairo.trm(cairotrm_set_color):
	Pay attention to the value of 'set palette maxcolors'.
	Bugfix.

2008-07-26  Ethan Merritt  <merritt@u.washington.edu>
