@@ -25,6 +25,7 @@ New features, changes and fixes since gnuplot version 4.2
 * NEW more smoothing options: new kernels (for dgrid3d) and 'smooth cumulative'
 * NEW commands 'show bind' and 'reset bind'
 * NEW terminal dpu414 - Seiko DPU-414 thermal printer
+* NEW command 'evaluate' executes commands from a string variable
 * FIX remove the limit of 64 characters read as string data from a data file
 * FIX remainder of command line is not lost after a "load" command
 * FIX more complete support for locale internationalization, UTF-8 encoding
